<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Giving Tree</string>
    <string name="what_date">Until what date?</string>
    <string name="button_send">Send</string>
    <string name="item_name">What are you lending?</string>
    <string name="rec_name">To who?</string>
    <string name="what_time">And what time?</string>
    <string name="priority">High Priority</string>



</resources>